--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
-    
+    <div class="card">
+        <img src="images/image-qr-code.png" alt="">
+        <h2 class="title">Improve yout fron end skills by building projects</h2>
+        <p>Scan the Qr code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>  
 </body>
 </html>
